[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://menu/main-menu/ui/host_setting/host_setting.gd" type="Script" id=3]
[ext_resource path="res://assets/button/border_button.tscn" type="PackedScene" id=4]

[node name="host_setting" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 600 )
script = ExtResource( 3 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00392157, 0.00392157, 0.00392157, 0.980392 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 480, 600 )

[node name="MarginContainer8" type="MarginContainer" parent="VBoxContainer2"]
margin_right = 600.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 30 )

[node name="Label2" type="Label" parent="VBoxContainer2"]
margin_top = 34.0
margin_right = 600.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 1 )
text = "Match Setting"
align = 1
valign = 1

[node name="MarginContainer7" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 98.0
margin_right = 600.0
margin_bottom = 128.0
rect_min_size = Vector2( 80, 30 )

[node name="MarginContainer9" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 132.0
margin_right = 600.0
margin_bottom = 162.0
rect_min_size = Vector2( 80, 30 )

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2"]
margin_top = 166.0
margin_right = 600.0
margin_bottom = 304.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer2"]
margin_right = 600.0
margin_bottom = 40.0
alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer2/VBoxContainer2/HBoxContainer2"]
margin_left = 124.0
margin_right = 476.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Battle Time (minute)"
valign = 1

[node name="MarginContainer9" type="MarginContainer" parent="VBoxContainer2/VBoxContainer2"]
margin_top = 44.0
margin_right = 600.0
margin_bottom = 54.0
rect_min_size = Vector2( 80, 10 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer2"]
margin_top = 58.0
margin_right = 600.0
margin_bottom = 138.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/VBoxContainer2/HBoxContainer3"]
margin_right = 82.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3

[node name="short" parent="VBoxContainer2/VBoxContainer2/HBoxContainer3" instance=ExtResource( 4 )]
margin_left = 86.0
margin_right = 226.0
margin_bottom = 80.0
rect_min_size = Vector2( 140, 80 )
size_flags_horizontal = 3
button_color = Color( 0.333333, 0.333333, 0.333333, 1 )
button_label = "  5 M  "

[node name="Color" type="ColorRect" parent="VBoxContainer2/VBoxContainer2/HBoxContainer3/short"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.117647, 0.117647, 0.117647, 0.552941 )

[node name="normal" parent="VBoxContainer2/VBoxContainer2/HBoxContainer3" instance=ExtResource( 4 )]
margin_left = 230.0
margin_right = 370.0
margin_bottom = 80.0
rect_min_size = Vector2( 140, 80 )
size_flags_horizontal = 3
button_color = Color( 0.333333, 0.333333, 0.333333, 1 )
button_label = "  10 M  "

[node name="Color" type="ColorRect" parent="VBoxContainer2/VBoxContainer2/HBoxContainer3/normal"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.117647, 0.117647, 0.117647, 0.552941 )

[node name="long" parent="VBoxContainer2/VBoxContainer2/HBoxContainer3" instance=ExtResource( 4 )]
margin_left = 374.0
margin_right = 514.0
margin_bottom = 80.0
rect_min_size = Vector2( 140, 80 )
size_flags_horizontal = 3
button_color = Color( 0.333333, 0.333333, 0.333333, 1 )
button_label = "  15 M  "

[node name="Color" type="ColorRect" parent="VBoxContainer2/VBoxContainer2/HBoxContainer3/long"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.117647, 0.117647, 0.117647, 0.552941 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/VBoxContainer2/HBoxContainer3"]
margin_left = 518.0
margin_right = 600.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3

[node name="MarginContainer10" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 308.0
margin_right = 600.0
margin_bottom = 338.0
rect_min_size = Vector2( 80, 30 )

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer2"]
margin_top = 342.0
margin_right = 600.0
margin_bottom = 480.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer3"]
margin_right = 600.0
margin_bottom = 40.0
alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer2/VBoxContainer3/HBoxContainer2"]
margin_left = 96.0
margin_right = 503.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Respawn Time (second)"
valign = 1

[node name="MarginContainer9" type="MarginContainer" parent="VBoxContainer2/VBoxContainer3"]
margin_top = 44.0
margin_right = 600.0
margin_bottom = 54.0
rect_min_size = Vector2( 80, 10 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer3"]
margin_top = 58.0
margin_right = 600.0
margin_bottom = 138.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/VBoxContainer3/HBoxContainer3"]
margin_right = 82.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3

[node name="respawn_short" parent="VBoxContainer2/VBoxContainer3/HBoxContainer3" instance=ExtResource( 4 )]
margin_left = 86.0
margin_right = 226.0
margin_bottom = 80.0
rect_min_size = Vector2( 140, 80 )
size_flags_horizontal = 3
button_color = Color( 0.333333, 0.333333, 0.333333, 1 )
button_label = "  15 S  "

[node name="Color" type="ColorRect" parent="VBoxContainer2/VBoxContainer3/HBoxContainer3/respawn_short"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.117647, 0.117647, 0.117647, 0.552941 )

[node name="respawn_normal" parent="VBoxContainer2/VBoxContainer3/HBoxContainer3" instance=ExtResource( 4 )]
margin_left = 230.0
margin_right = 370.0
margin_bottom = 80.0
rect_min_size = Vector2( 140, 80 )
size_flags_horizontal = 3
button_color = Color( 0.333333, 0.333333, 0.333333, 1 )
button_label = "  20 S  "

[node name="Color" type="ColorRect" parent="VBoxContainer2/VBoxContainer3/HBoxContainer3/respawn_normal"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.117647, 0.117647, 0.117647, 0.552941 )

[node name="respawn_long" parent="VBoxContainer2/VBoxContainer3/HBoxContainer3" instance=ExtResource( 4 )]
margin_left = 374.0
margin_right = 514.0
margin_bottom = 80.0
rect_min_size = Vector2( 140, 80 )
size_flags_horizontal = 3
button_color = Color( 0.333333, 0.333333, 0.333333, 1 )
button_label = "  25 S  "

[node name="Color" type="ColorRect" parent="VBoxContainer2/VBoxContainer3/HBoxContainer3/respawn_long"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.117647, 0.117647, 0.117647, 0.552941 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/VBoxContainer3/HBoxContainer3"]
margin_left = 518.0
margin_right = 600.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 484.0
margin_right = 600.0
margin_bottom = 836.0
rect_min_size = Vector2( 80, 80 )
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 840.0
margin_right = 600.0
margin_bottom = 920.0
size_flags_horizontal = 3
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 14.0
margin_right = 94.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )

[node name="create" parent="VBoxContainer2/HBoxContainer3" instance=ExtResource( 4 )]
margin_left = 98.0
margin_right = 298.0
margin_bottom = 80.0
button_color = Color( 0, 0.517647, 0.164706, 1 )
button_label = "Create"

[node name="close" parent="VBoxContainer2/HBoxContainer3" instance=ExtResource( 4 )]
margin_left = 302.0
margin_right = 502.0
margin_bottom = 80.0
button_color = Color( 0.435294, 0.435294, 0.435294, 1 )
button_label = "Close"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 506.0
margin_right = 586.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 924.0
margin_right = 600.0
margin_bottom = 1024.0
rect_min_size = Vector2( 0, 100 )

[connection signal="pressed" from="VBoxContainer2/VBoxContainer2/HBoxContainer3/short" to="." method="_on_short_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer2/HBoxContainer3/normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer2/HBoxContainer3/long" to="." method="_on_long_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer3/HBoxContainer3/respawn_short" to="." method="_on_respawn_short_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer3/HBoxContainer3/respawn_normal" to="." method="_on_respawn_normal_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer3/HBoxContainer3/respawn_long" to="." method="_on_respawn_long_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer3/create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer3/close" to="." method="_on_close_pressed"]
